# mandelbrot

./: .gitignore  Cargo.toml  Untitled.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: args.rs  color.rs  fractal.rs  main.rs  monocub.rs  render.rs
