[package]
name = "mandelbrot"
# this is unfinished software, it would be silly to version it this early
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
image = "0.23.14"
nom = "7.1"
num = "0.4"
rayon = "1.5.1"
